syntax = "proto3";
import "google/protobuf/any.proto";
import "basekv/Type.proto";
import "basekv/Snapshot.proto";
import "basekv/raft/ClusterConfig.proto";
import "basekv/raft/Enums.proto";
package basekv;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basekv.proto";
option optimize_for = SPEED;

message SplitHint{
  string type = 1;
  map<string, double> load = 2;
  optional bytes splitKey = 3;
}

message KVRangeDescriptor {
  basekv.KVRangeId id = 1;
  uint64 ver = 2;
  Boundary boundary = 3;
  basekv.State.StateType state = 4;
  raft.RaftNodeStatus role = 5;
  raft.ClusterConfig config = 6;
  map<string, raft.RaftNodeSyncState> syncState = 7;
  map<string, double> statistics = 8;
  repeated SplitHint hints = 9;
  google.protobuf.Any fact = 10;
  uint64 hlc = 11;
}

message KVRangeStoreDescriptor {
  string id = 1;
  map<string, double> statistics = 2;
  repeated KVRangeDescriptor ranges = 3;
  uint64 hlc = 4;
  map<string, string> attributes = 5;
}
